fixed broken project links on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2162,12 +2162,6 @@ template {
   body {
     overflow-x: hidden; }
 
-  .projectsWrapperMobile.visible,
-  .skillsContainer,
-  .rightWrapper,
-  .contactHeading {
-    z-index: -100; }
-
   .gridContainer {
     grid-template-rows: minmax(auto, 10vh) repeat(2, minmax(auto, 17rem)) minmax(auto, 5rem) repeat(3, minmax(auto, 65rem)) minmax(auto, 10vh) minmax(auto, 62rem) minmax(auto, 25vh) minmax(25vh, 15rem) minmax(auto, 60rem) minmax(auto, 25vh) minmax(auto, 74rem) minmax(auto, 7rem);
     grid-template-columns: [full-start] auto repeat(18, [col-start] minmax(min-content, 1fr) [col-end]) auto [full-end];
